vlib/v/checker/tests/orm_bulk_update_pointer_array_error.out
vlib/v/checker/tests/orm_bulk_update_pointer_array_error.vv:16:66: error: ORM: bulk update currently supports only arrays of `BulkPointerUpdateUser` values
   14 |     users := [&user]
   15 |     sql db {
   16 |         update BulkPointerUpdateUser set name = users.name where id == users.id
      |                                                                        ~~   17 |     }!
   18 | }
